--- a/Kontakt.html
+++ b/Kontakt.html
@@ -18,13 +18,13 @@
             <h1>Kontaktiere uns!</h1>
             <form action="https://formsubmit.co/imventrixx@gmail.com" method="POST">
                 <label for="fname">Vorname</label>
-                <input id="fname" type="text"><br>
+                <input id="fname" type="text" name="forname"><br>
                 <label for="lname">Nachname</label>
-                <input id="lname" type="text"><br>
+                <input id="lname" type="text" name="lastname"><br>
                 <label for="address">Adresse</label>
                 <input id="address" type="text"><br> 
                 <label for="email">Email-Adresse</label>
-                <input type="email" id="email"><br>
+                <input type="email" id="email" name="email"><br>
                 <label for="message">Deine Nachricht</label>
                 <input id="message" type="text"><br>   
                 <label for="check">AGB-Bestätigung</label>
